# StarDust

./: .clang-format  .gitignore  CMakeLists.txt  Find3rdPartyLibs.cmake  README.md
Code/: CMakeLists.txt  include_files.cmake  source_files.cmake
Code/Include/PixelDust/Window/: Window.h
Code/Include/StarDust/: LightSource.h  Renderer.h  Shader.h  Texture.h  Utils.h  Vertex.h  VertexArray.h  Window.h
Code/Include/StarDust/Buffer/: Buffer.h  FrameBuffer.h  IndexBuffer.h  RenderBuffer.h  VertexBuffer.h  VertexBufferLayout.h
Code/Include/StarDust/Drawable/: Box.h  Drawable.h  Geometry3D.h  Rectangle.h
Code/Include/StarDust/Model/: Mesh.h  MeshRegistry.h  Model.h  ModelInstance.h  ModelInstance3D.h  ModelInstanceSystem.h  ModelRegistry.h
Code/Include/StarDust/Shader/: ShaderProgram.h  ShaderProgramRegistry.h
Code/Include/StarDust/Sprite/: SpriteAsset.h  SpriteAssetRegistry.h  SpriteInstance.h
Code/Include/StarDust/Utilities/: Math.h
Code/Source/PixelDust/Window/: Window.cpp
Code/Source/StarDust/: LightSource.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Utils.cpp  VertexArray.cpp  Window.cpp
Code/Source/StarDust/Buffer/: FrameBuffer.cpp  IndexBuffer.cpp  RenderBuffer.cpp  VertexBuffer.cpp  VertexBufferLayout.cpp
Code/Source/StarDust/Drawable/: Box.cpp  Geometry3D.cpp  Rectangle.cpp
Code/Source/StarDust/Model/: Mesh.cpp  MeshRegistry.cpp  Model.cpp  ModelInstance.cpp  ModelInstance3D.cpp  ModelInstanceSystem.cpp  ModelRegistry.cpp
Code/Source/StarDust/Shader/: ShaderProgram.cpp  ShaderProgramRegistry.cpp
Code/Source/StarDust/Sprite/: SpriteAsset.cpp  SpriteAssetRegistry.cpp  SpriteInstance.cpp
Code/Source/StarDust/Utilities/: Math.cpp  Utils.cpp
Code/Tests/StarDust/: AxesTest.cpp  AxesTest.h  CMakeLists.txt  CubeGameTest.cpp  CubeGameTest.h  GameOfLifeTest.cpp  GameOfLifeTest.h  InstancingTest.cpp  InstancingTest.h  MeshTest.cpp  MeshTest.h  PrimitiveTest.cpp  PrimitiveTest.h  SpriteTest.cpp  SpriteTest.h  StressTest.cpp  StressTest.h  TerrainGenerationTest.cpp  TerrainGenerationTest.h  Test.cpp  Test.h  TestScene.cpp  TestScene.h  Tests.cpp
Code/Tests/StarDust/Demo/: CMakeLists.txt  DemoApplication.cpp
Design/: Design.md
Resources/Shaders/: default.frag  default.vert  ellipse.frag  model_instance.frag  model_instance.vert  pixelate.frag
Resources/Stardust/Shaders/: model_instance.frag  model_instance.vert  pixelate.frag  pixelate.vert
